--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <a
               href="mailto:hello@launchpadstudio.in"
               class="text-lp-blue hover:underline"
-              >hello@launchpadstudio.vercel.app</a
+              >launchpadstudio@gmail.com</a
             >
           </p>
           <p>
